# LinkbotFirmwareRescue

./: CMakeLists.txt  appIcon.rc  install.cmake.in  resource.rc
src/: dialog.cpp  listener.cpp  main.cpp
ui/: dialog.ui
